@@ -8,12 +8,20 @@
 #include "KgeMemoryTrack.h"
 #include "../include/InputManager.h"
 #include "../include/BlockData.h"
+#include "../include/ResourceManager.h"
+#include "../include/Texture.h"
+#include "../include/Image.h"
+#include "../include/FileSystemManager.h"
+#include "../include/FileSystem.h"
 
 #if KGE_PLATFORM == KGE_PLATFORM_LINUX
 #   include "LinuxWindow.h"
 #endif
 
-KGE_API kge::gfx::Renderer*	g_pRenderer = NULL;
+// Public objects
+KGE_API kge::gfx::Renderer						*	g_pRenderer			= NULL;
+KGE_API kge::ResourceManager<kge::gfx::Texture>	*	g_pTextureManager	= NULL;
+KGE_API kge::ResourceManager<kge::gfx::Image>	*	g_pImageManager		= NULL;
 
 namespace kge
 {
@@ -25,6 +33,13 @@ namespace kge
 		m_pPluginMgr = PluginManager::GetSingletonPtr();
 		m_pLogger	 = KGE_NEW(io::Logger)();
 
+		// Create resource managers
+		g_pTextureManager	= KGE_NEW(ResourceManager<gfx::Texture>)();
+		g_pImageManager		= KGE_NEW(ResourceManager<gfx::Image>)();
+
+		// Add default file system
+		io::FileSystemManager::getSingletonPtr()->RegisterFileSystem(KGE_NEW(io::FileSystem)());
+
 	} // Constructor
 
 	//------------------------------------------------------------------------------------
@@ -34,6 +49,8 @@ namespace kge
 	{
 		KGE_DELETE(m_pWindow, KgeWindow);
 		KGE_DELETE(g_pRenderer, Renderer);
+		KGE_DELETE(g_pImageManager, ResourceManager);
+		KGE_DELETE(g_pTextureManager, ResourceManager);
 		m_pPluginMgr->Release();
 		core::Profiler::GetPointer()->Release();
 
