@@ -2,6 +2,7 @@
 #include "../include/FileSystem.h"
 #include "../include/Logger.h"
 #include "../include/File.h"
+#include "../include/Stream.h"
 
 namespace kge
 {
@@ -64,8 +65,32 @@ namespace kge
 		//------------------------------------------------------------------------------------
 		Stream* FileSystem::Load( core::stringc FileName )
 		{
+			// Open the file
+			FILE*	pF;
+			fopen_s(&pF, FileName.c_str(), "rb");
+			if (!pF)
+			{
+				io::Logger::Error("Can't load %s file. File not found", FileName.c_str());
+				return NULL;
+			}
 
-			return NULL;
+			// Get the file size
+			fseek(pF, 0, SEEK_END);
+			int iEnd = ftell(pF);
+			fseek(pF, 0, SEEK_SET);
+			int iStart = ftell(pF);
+			int size = iEnd - iStart;
+
+			// Read the file
+			u8* Buffer = KGE_NEW_ARRAY(u8, size);
+			int i = (int)fread(Buffer, 1, size, pF);
+			if (i==-1)
+				io::Logger::Error("Could not read file: ", FileName.c_str());
+
+			// Create the stream
+			Stream* pS = KGE_NEW(Stream)((void*)Buffer, size, core::String::Convert(FileName));
+
+			return pS;
 
 		} // Load
 
