@@ -1,0 +1,31 @@
+#include "../include/Settings.h"
+
+namespace kge
+{
+	//------------------------------------------------------------------------------------
+	// Constructor
+	//------------------------------------------------------------------------------------
+	Settings::Settings(): MaxTextureSize(4096)
+	{
+
+	} // Constructor
+
+	//------------------------------------------------------------------------------------
+	// Destructor
+	//------------------------------------------------------------------------------------
+	Settings::~Settings()
+	{
+
+	} // Destructor
+
+	//------------------------------------------------------------------------------------
+	// Returns the singleton pointer
+	//------------------------------------------------------------------------------------
+	Settings* Settings::GetPointer()
+	{
+		static Settings s;
+		return &s;
+
+	} // GetPointer
+
+} // kge
