@@ -9,7 +9,7 @@ namespace kge
 	{
 		EPT_Renderer = 0,		/**< Render system plugin */
 		EPT_InputManager,		//!< InputManager plugin
-		EPT_Loader,		//!< Texture loader plugin
+		EPT_TextureLoader,				//!< Texture loader plugin
 
 		EPT_Unknown				//!< Unknown plugin type
 
