@@ -3,6 +3,9 @@
 #include "../../engine/include/math.h"
 #include "../../engine/include/VertexElement.h"
 #include "../../engine/include/Profiler.h"
+#include "../../engine/include/ResourceManager.h"
+#include "../../engine/include/Texture.h"
+#include "../../engine/include/PluginManager.h"
 
 #if KGE_PLATFORM == KGE_PLATFORM_WINDOWS
 	#ifdef _DEBUG
@@ -12,11 +15,16 @@
 	#endif
 #endif
 
+KGE_IMPORT extern kge::ResourceManager<kge::gfx::Texture>	*	g_pTextureManager;
+
+
 struct Vertex3
 {
 	float	x,
 			y,
-			z;
+			z,
+			tx,
+			ty;
 
 }; // Vertex3
 
@@ -39,9 +47,9 @@ int main()
 	kge::gfx::VertexDec			*	VD;
 	Vertex3 v[] =
 	{
-		{-1,-1,0},
-		{1,-1,0},
-		{0,1,0}
+		{-1,-1,0,0,0},
+		{1,-1,0,1,0},
+		{0,1,0,0.5f,1}
 	};
 	kge::u16 i[] = {0,1,2};
 	VB = pRen->CreateVertexBuffer(v,3,sizeof(Vertex3));
@@ -58,13 +66,26 @@ int main()
 			kge::gfx::EVEU_Position,
 			0
 		},
+		{
+			0,
+			12,
+			kge::gfx::EVET_Float2,
+			kge::gfx::EVEM_Default,
+			kge::gfx::EVEU_TexCoord,
+			0
+		},
 		CusVertexEND()
 	};
 	kge::core::DynamicArray<kge::gfx::CustomVertexElement> cve;
 	cve.push_back(cve2[0]);
 	cve.push_back(cve2[1]);
+	cve.push_back(cve2[2]);
 	kge::core::stringc vdName("V3");
 	VD = pRen->CreateVertexDeclaration(cve, vdName);
+
+	// Load a texture
+	kge::PluginManager::GetSingletonPtr()->LoadPlugin("Loader_DDS");
+	g_pTextureManager->Load("d:\\box.dds", NULL, NULL);
 
 	// Create matrices
 	kge::math::Matrix mProj;
@@ -87,7 +108,7 @@ int main()
 		pRen->DrawTriangleList(3, 3);
 		pRen->EndRendering();
 		kge::core::stringc str = kge::core::Profiler::GetPointer()->GetData();
-		printf(str.c_str());
+		//printf(str.c_str());
 	}
 
 	return 0;
